--- a/src/styles/partials/_modal.scss
+++ b/src/styles/partials/_modal.scss
@@ -13,6 +13,7 @@
     z-index: $z-index-modal;
     overflow-y: auto;
     transition: opacity 0.15s linear;
+    will-change: opacity;
 }
 
 .modal-open {
